--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   },
   "dependencies": {
     "firebase": "^10.12.2",
+    "firebase-tools": "^13.10.2",
+    "g": "^2.0.1",
     "moment": "^2.30.1",
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
